# dhis2eo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
dhis2eo/data/: utils.py
dhis2eo/data/ads/: AUTHENTICATION.md
dhis2eo/data/ads/cams/: hourly.py
dhis2eo/data/cds/: AUTHENTICATION.md
dhis2eo/data/cds/cordex/: __init__.py  daily.py  models.py
dhis2eo/data/cds/era5/: __init__.py  hourly.py  monthly.py
dhis2eo/data/cds/era5_drought/: __init__.py  monthly.py
dhis2eo/data/cds/era5_heat/: hourly.py
dhis2eo/data/cds/era5_land/: hourly.py  monthly.py
dhis2eo/data/cds/esa_landcover/: yearly.py
dhis2eo/data/cds/s2s/: s2s-test-fine.grib  s2s-test-fine.grib.5b7b6.idx  s2s-test.grib  s2s-test.grib.5b7b6.idx  test_cds_forecast_data.ipynb  tigge-test.grib  tigge-test.grib.5b7b6.idx
dhis2eo/data/cds/seas5/: hourly.py
dhis2eo/data/cds/seasonal/: hourly.py
dhis2eo/data/cdse/: AUTHENTICATION.md  shared.py
dhis2eo/data/cdse/_modis_landcover/: yearly.py
dhis2eo/data/destine/: AUTHENTICATION.md  __init__.py
dhis2eo/integrations/: chap.py  geopandas.py  pandas.py
dhis2eo/utils/: time.py  types.py
tests/data/: _explore_ecmwf_pystac.py  cds.py  chc.py  download_cordex_all_sierra_leone.ipynb  explore_cordex_ensemble.ipynb  explore_cordex_ensemble_asynch.ipynb  explore_era5land_asynch.ipynb  import_cordex_all.ipynb  import_cordex_all_sierra_leone.ipynb  import_cordex_workflow.ipynb  import_cordex_workflow_max_temp.ipynb  import_cordex_workflow_mean_temp.ipynb  import_cordex_workflow_min_temp.ipynb  import_cordex_workflow_precip_norway.ipynb  import_ifs_forecast.ipynb  test_ads.py  test_cds.py  test_cdse.py  test_chc.py  test_destine.py  test_ecmwf.py  test_seas5.ipynb  test_seas5.py  test_tigge.ipynb  test_tigge.py  test_worldpop.py  worldpop.py
tests/data/old/: explore_cordex_data.ipynb  explore_cordex_ensemble.ipynb  import_cordex_workflow_mean_temp.ipynb  import_cordex_workflow_min_temp.ipynb  import_cordex_workflow_precip_norway.ipynb
tests/integrations/: test_chap.py  test_pandas_integration.py
tests/test_data/: era5-land-daily-mean-temperature-2m-july-2025-sierra-leone.nc
tests/test_outputs/: geoBoundaries-MWI-ADM2_dhis2.json
(+22 files in other folders)
