[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2eo"
version = "0.2.0"
description = "DHIS2 Earth Observation Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthkit-data[netcdf,geotiff,geopandas,projection,cds]",
    "xarray",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dhis2eo*"]
