[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2eo"
version = "0.2.0"
description = "DHIS2 Earth Observation Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthkit-data[netcdf,geotiff,geopandas,projection,cds]",
    "xarray",
    "rioxarray",
    "pandas",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dhis2eo*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
